--- a/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
+++ b/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
@@ -104,10 +104,10 @@
         <div class="col-sm-5">
             <ul class="pagination">
                 <li id="1" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="1" ></span></a></li>
-                <li id="2" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="2" onclick="voteClick(this.id)"></span></a></li>
-                <li id="3" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="3" onclick="voteClick(this.id)"></span></a></li>
-                <li id="4" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="4" onclick="voteClick(this.id)"></span></a></li>
-                <li id="5" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="5" onclick="voteClick(this.id)"></span></a></li>
+                <li id="2" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="2" ></span></a></li>
+                <li id="3" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="3" ></span></a></li>
+                <li id="4" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="4" ></span></a></li>
+                <li id="5" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="5" ></span></a></li>
             </ul>
         </div>
     </div>
@@ -179,6 +179,22 @@
             </div>
         </div>
     <div class="row"><br /><br /></div>
+
+<div class="row">
+    @if (Model.filmPageModel.Comments != null)
+    {
+
+        for (int i = 0; i < Model.filmPageModel.Comments.Count; i++)
+        {
+            <div class="col-sm-3">
+                @Model.filmPageModel.Comments[i] <label> </label>
+            </div>
+        }
+    }
+</div>
+
+
+
     <div class="row">
         <div class="row">
             <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#AddComment">
@@ -250,6 +266,4 @@
             error: function () { loadingDiv.style.visibility = "hidden"; alert('not voted'); }
         });
     }
-
-
 </script>
