--- a/FilmBayMVC/Views/Shared/_Layout.cshtml
+++ b/FilmBayMVC/Views/Shared/_Layout.cshtml
@@ -24,11 +24,11 @@
             </div>
 
             <div  class="navbar-collapse collapse">
-                    @*<ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-            </ul>*@
+                   <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Main Page", "Index", "Home")</li>
+                 <li>@Html.ActionLink("About", "About", "Home")</li>
+             <li>@Html.ActionLink("My movies", "UserInfo", "UserPage")</li>
+            </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
         </div>
