--- a/FilmBayMVC/Views/UserPage/UserInfo.cshtml
+++ b/FilmBayMVC/Views/UserPage/UserInfo.cshtml
@@ -43,11 +43,7 @@
         }
     </div>
 <div class="row">
-    <ul class="inline">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-    </ul>
+    <input id="input-2" class="rating" data-min="0" data-max="5" data-step="0.1">
 </div>
     }
 <script>
