--- a/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
+++ b/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
@@ -21,6 +21,7 @@
   width: 100%;
 }
 
+
 </style>
 
 <h2>FilmPage</h2>
@@ -122,6 +123,8 @@
         <div class="row">
             <br /><br />
         </div>
+
+   <div class="row">
         <div class="col-sm-4">
             <div class="row" style="height:300px;overflow-y:scroll;overflow-x:hidden">
                 @if (Model.filmPageModel.actors != null)
@@ -140,48 +143,38 @@
                         <div class="row"><br /></div>
                     }
                 }
-
-
-            </div>
+          
         </div>
-
-
     </div>
+       <div class="col-sm-2"></div>
+
+       <div class="col-sm-6" style="overflow:auto">
+           <div class="row" style="height:300px;overflow-y:scroll;overflow-x:hidden">
+               @if (Model.filmPageModel.Photos != null)
+               {
+                   for (int i = 0; i < Model.filmPageModel.Photos.Count; i++)
+                   {
+                           <div class="col-sm-3" style="max-height:200px;max-width:200px">
+                               <img src="@Model.filmPageModel.Photos[i].photo_url" class="img-responsive" data-toggle="modal" data-target="#ShowCarousel" onclick="goTo(@i)"/>
+                               <br />
+                           </div>
+                    
+                   }
+               }
+           </div>
+       </div>
+
+
+
+</div>
+
+
     <div class="row">
         <br /><br />
     </div>
-        <div class="row">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel" >
-                <!-- Indicators -->
-                @*<ol class="carousel-indicators">
-                    @for (int i = 0; i < Model.filmPageModel.Photos.Count; i++)
-                    {
-                        string x = i.ToString();
-                        <li data-target="#myCarousel" data-slide-to="x" class="active"></li>
-                    }
-                </ol>*@
+       
 
-                <div class="carousel-inner" >
-                    <div class="item active" style="max-height:600px">
-                        <img src="@Model.filmPageModel.Photos[0].photo_url" alt="Photo" class="tales"  >
-                    </div>
-                    @for (int i = 1; i < Model.filmPageModel.Photos.Count; i++)
-                    {
-                        <div class="item " style="max-height:600px">
-                            <img src="@Model.filmPageModel.Photos[i].photo_url" alt="Photo" class="tales"   >
-                        </div>
 
-                    }
-                </div>
-                <!-- Left and right controls -->
-                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-            </div>
-        </div>
     <div class="row"><br /><br /></div>
 
 <div class="row">
@@ -212,6 +205,11 @@
                   Buy Movie
                 </button>
             </div>
+            <div class="col-sm-2">
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#ShowCarousel">
+                    Show Gallery
+                </button>
+            </div>
         </div>
 
         <div class="row">
@@ -239,6 +237,59 @@
         </div>
     </div>
     
+<div class="row">
+    <div class="modal fade" id="ShowCarousel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                 
+                        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                            <!-- Indicators -->
+                            @*
+                            <ol class="carousel-indicators">
+                                <li data-target="#myCarousel" data-slide-to="0"></li>
+                            @for (int i = 1; i < Model.filmPageModel.Photos.Count; i++)
+                            {
+                                string x = i.ToString();
+                                <li data-target="#myCarousel" data-slide-to="@x" ></li>
+                            }
+                        </ol>*@
+
+                            <div class="carousel-inner">
+                                <div class="item active" style="max-height:600px">
+                                    <img src="@Model.filmPageModel.Photos[0].photo_url" alt="Photo" class="tales">
+                                </div>
+                                @for (int i = 1; i < Model.filmPageModel.Photos.Count; i++)
+                                {
+                                    <div class="item " style="max-height:600px">
+                                        <img src="@Model.filmPageModel.Photos[i].photo_url" alt="Photo" class="tales">
+                                    </div>
+
+                                }
+                            </div>
+                            <!-- Left and right controls -->
+                            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                            </a>
+                            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                            </a>
+                        </div>
+                </div>
+            </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+            </div>
+        </div>
+    </div>
+</div>
+    </div>
+
+
 
 
 
@@ -247,6 +298,16 @@
     $('#AddComment').on('shown.bs.modal', function () {
         $('#myInput').focus()
     })
+    $('#ShowCarousel').on('shown.bs.modal', function () {
+        $('#myInput').focus()
+    })
+    function goTo(value)
+    {
+       // alert('click');
+        $('#myCarousel').carousel(value);
+        alert(value);
+    }
+
     function voteClick(value) {
         var number = value;
         alert(number + " number");
