--- a/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
+++ b/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
@@ -2,13 +2,16 @@
 @{
     ViewBag.Title = "FilmPage";
 }
-
-<script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.10.2.js")"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
-
-
+<head>
+    <title>Filmpage</title>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.10.2.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <link href="../css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
+    <script src="../js/star-rating.js" type="text/javascript"></script>
+</head>
 <style>
     .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
@@ -30,7 +33,8 @@
     @{
         String filmid = Model.filmPageModel.id.ToString();
         <label hidden id="idfilm">@filmid</label>
-     }
+    <input id="input-21" value="@Math.Round(Double.Parse(Model.filmPageModel.rating), MidpointRounding.AwayFromZero)" type="number" class="rating-loading" data-size="sm" readonly>
+}
     </div>
 <div class="row">
     <div class="col-sm-2">
@@ -108,17 +112,29 @@
             </div>
 
         </div>
-        <div class="col-sm-5">
-            <ul class="pagination">
-                <li id="1" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="1" ></span></a></li>
-                <li id="2" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="2" ></span></a></li>
-                <li id="3" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="3" ></span></a></li>
-                <li id="4" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="4" ></span></a></li>
-                <li id="5" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="5" ></span></a></li>
-            </ul>
+      
+    @*
+    <div class="col-sm-5">
+        <ul class="pagination">
+            <li id="1" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="1" ></span></a></li>
+            <li id="2" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="2" ></span></a></li>
+            <li id="3" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="3" ></span></a></li>
+            <li id="4" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="4" ></span></a></li>
+            <li id="5" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="5" ></span></a></li>
+        </ul>
+        </div>*@
+    </div>
+    </div>
+
+
+<div class="row">
+    <div class="col-sm-2"><strong>My Score:</strong></div>
+    <div class="col-sm-6">
+    <input id="input-21d" value="0" type="number" class="rating-loading" min=0 max=5 step=0.5 data-size="sm">
         </div>
-    </div>
-    </div>
+</div>
+
+
     <div class="row">
         <div class="row">
             <br /><br />
@@ -311,6 +327,24 @@
         $('#myCarousel').carousel(value);
         alert(value);
     }
+    $('#input-21d').on('rating.change', function (event, value, caption) {
+     //   alert(value);
+        voteClick(value);
+        console.log(value);
+        console.log(caption);
+    });
+
+    $("#input-21").rating({
+        clearButton: '',
+        clearElement: "", 
+        captionElement: "#kv-caption"
+    });
+    $("#input-21d").rating({
+        clearButton: '',
+        clearElement: "", 
+        captionElement: "#kv-caption"
+    });
+
 
     function voteClick(value) {
         var number = value;
