--- a/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
+++ b/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
@@ -31,18 +31,25 @@
 
 <div class="container">
     @{
+        
         String filmid = Model.filmPageModel.id.ToString();
         <label hidden id="idfilm">@filmid</label>
-    <input id="input-21" value="@Model.filmPageModel.rating" type="number" class="rating-loading" data-size="sm" readonly>
+  // <input id="input-21" value="@Model.filmPageModel.rating" type="number" class="rating-loading" data-size="sm" readonly>
 }
     </div>
-<div class="row">
+
+    <div class="row" id="PartialRating">
+        @{Html.RenderPartial("_PartialRating", Model);}
+        </div>
+
+    <div class="row">
+
     <div class="col-sm-2">
         <img src="@Model.filmPageModel.poster" class="img-responsive" style="height:230px" />
     </div>
     <div class="row">
         <div class="col-sm-6">
-                @Html.ActionLink(@Model.filmPageModel.Title, "FilmPage")   (@Model.filmPageModel.ReleaseDate.ToString().Substring(0, 4))
+                @Model.filmPageModel.Title   (@Model.filmPageModel.ReleaseDate.ToString().Substring(0, 4))
        
             <div class="row">
                 
@@ -351,15 +358,10 @@
         alert(number + " number");
           var filmId = document.getElementById("idfilm").textContent;
         alert(filmId+" film id");
-        $.ajax({
-
-            url: '@Url.Action("Vote", "FilmPage")' + '?number=' + number + '&filmid=' +filmId,
-            data: {}, //parameters go here in object literal form
-            type: 'GET',
-            //datatype: 'json',
-            success: function (data) { loadingDiv.style.visibility = "hidden"; alert('voted'); },
-            error: function () { loadingDiv.style.visibility = "hidden"; alert('not voted'); }
-        });
+      
+        $('#PartialRating').load('@Url.Action("Vote", "FilmPage")' + '?number=' + number + '&filmid=' + filmId);
+            
+      
     }
     function buyClick() {
 
