--- a/FilmBayMVC/Views/Home/_filmsSortedByGenereAndRatingPartialView.cshtml
+++ b/FilmBayMVC/Views/Home/_filmsSortedByGenereAndRatingPartialView.cshtml
@@ -22,8 +22,8 @@
                 <div   class="col-lg-3">
                      <img style="height:190px" src=@Model.filmTableList[i].poster_url  />
                 </div>
-                <div class="col-lg-9">
-                    @Html.ActionLink(@Model.filmTableList[i].title, "FilmPage", "FilmPage", new { id = Model.filmTableList[i].id_film }, null)   (@Model.filmTableList[i].release_date.ToString().Substring(0,4))
+                <div class="col-lg-9" >
+                    <a href="#"  onclick="goTo(@Model.filmTableList[i].id_film)"> @Model.filmTableList[i].title</a>  (@Model.filmTableList[i].release_date.ToString().Substring(0, 4))
                     
                 </div>
             </div>
@@ -37,4 +37,19 @@
                <button type="button" id=@i class="btn btn-link" onclick="openPageNumber(this.id)">@i</button>
             }   
     }
-}
+}3
+<script>
+    function goTo(value) {
+       
+        window.location.href = '@Url.Action("FilmPage", "FilmPage")' + '?id=' + value;
+      @*$.ajax({
+          url: '@Url.Action("FilmPage", "FilmPage")' + '?id=' + value,
+          data: {}, //parameters go here in object literal form
+          type: 'GET',
+          //datatype: 'json',
+          success: function (data) { alert('got here with data'); },
+          error: function () { alert('something bad happened'); }
+      });*@
+      }
+
+</script>
