--- a/FilmBayMVC/Views/UserPage/UserInfo.cshtml
+++ b/FilmBayMVC/Views/UserPage/UserInfo.cshtml
@@ -25,8 +25,7 @@
                 <div class="row">
                     <div class="col-sm-3 col-xs-2">
                         <div class="row">
-                            @Html.ActionLink(@Model.filmsToShow[i].Title, "FilmPage", "FilmPage", new { id = Model.filmsToShow[i].id }, null)   (@Model.filmsToShow[i].ReleaseDate.ToString())
-
+                            <a href="#" onclick="goTo(@Model.filmsToShow[i].id.ToString())"> @Model.filmsToShow[i].Title.ToString()</a>  (@Model.filmsToShow[i].ReleaseDate.ToString().Substring(0, 4))
                         </div>
                         <div class="row">
                             <span class="glyphicon glyphicon-star"></span> @Model.filmsToShow[i].rating /5
@@ -47,6 +46,17 @@
 </div>
     }
 <script>
-    
+    function goTo(value) {
+       
+        window.location.href = '@Url.Action("FilmPage", "FilmPage")' + '?id=' + value;
+    @*$.ajax({
+        url: '@Url.Action("FilmPage", "FilmPage")' + '?id=' + value,
+        data: {}, //parameters go here in object literal form
+        type: 'GET',
+        //datatype: 'json',
+        success: function (data) { alert('got here with data'); },
+        error: function () { alert('something bad happened'); }
+    });*@
+    }
 </script>
        
