--- a/FilmBayMVC/Views/Home/Index.cshtml
+++ b/FilmBayMVC/Views/Home/Index.cshtml
@@ -27,104 +27,109 @@
             if (Model.filmTableList.Count() > 2)
             {
                 <div class="row" style="height:400px; ">
-                    <div class="col-md-6" style="height:100%">
-                        <div class="row" style="background-color:red;height:60%;overflow:hidden;position:relative;z-index:2">
-                            <div style="z-index:3">
-                                <img style="width:100%;" src=@Model.mainPageFilmPhotos[0] />
-                            </div>
+                    <div class="col-xs-6" style="height:100%">
+                        <div id=@Model.filmTableList[0].id_film class="row" style="background-color:red;height:60%;overflow:hidden;position:relative;z-index:2" onclick="onFilmDiv_Click(this.id)">
+                            <div style=" z-index:3">
+                            <img style="width:100%;" src=@Model.mainPageFilmPhotos[0] />
+                        </div>
                             <div class="row" style="height:100px; position:absolute; left:25px;bottom:10px;z-index:6;">
-                                <div style="height:100%" class="col-sm-2">
+                                <div style="height:100%" class="col-xs-2">
                                     <img src=@Model.filmTableList[0].poster_url style="height:100%" />
                                 </div>
                                 @{
                 String title_0 = Model.filmTableList[0].title + " (" + Model.filmTableList[0].release_date.ToString().Substring(0, 4)+")";
                                 }
-                                <div class="col-sm-10" style="color:white;font-size:1em">
+                                <div class="col-xs-10" style="color:white;font-size:1em">
                                     @title_0
                                 </div>
                             </div>
 
                         </div>
                         <div class="row" style="background-color:green;height:40%">
-                            <div class="col-md-6 nopadding img-container" style="width:50%;background-color:brown;">
+                            <div id=@Model.filmTableList[2].id_film class="col-xs-6 nopadding img-container" style="width:50%;background-color:brown;" onclick="onFilmDiv_Click(this.id)">
                                 <img src=@Model.mainPageFilmPhotos[2] />
                                 <div class="row" style="height:80px; position:absolute; left:25px;bottom:10px;z-index:6;">
-                                    <div style="height:100%" class="col-sm-4">
+                                    <div style="height:100%" class="col-xs-4">
                                         <img src=@Model.filmTableList[2].poster_url style="height:100%" />
                                     </div>
                                     @{
-                                            String title_2 = Model.filmTableList[2].title + " (" + Model.filmTableList[2].release_date.ToString().Substring(0, 4) + ")";
+                String title_2 = Model.filmTableList[2].title + " (" + Model.filmTableList[2].release_date.ToString().Substring(0, 4) + ")";
                                     }
-                                    <div class="col-sm-8" style="color:white;font-size:13px">
+                                    <div class="col-xs-8" style="color:white;font-size:13px">
                                         @title_2
                                     </div>
                                 </div>
 
                             </div>
-                            <div class="col-md-6 nopadding img-container" style="width:50%;background-color:yellow;">
+
+                            <div id=@Model.filmTableList[3].id_film onclick="onFilmDiv_Click(this.id)" class="col-xs-6 nopadding img-container" style="width:50%;background-color:yellow;">
                                 <img src=@Model.mainPageFilmPhotos[3] />
                                 <div class="row" style="height:80px; position:absolute; left:25px;bottom:10px;z-index:6;">
-                                    <div style="height:100%" class="col-sm-4">
+                                    <div style="height:100%" class="col-xs-4">
                                         <img src=@Model.filmTableList[3].poster_url style="height:100%" />
                                     </div>
                                     @{
-                                            String title_3 = Model.filmTableList[3].title + " (" + Model.filmTableList[3].release_date.ToString().Substring(0, 4) + ")";
+                String title_3 = Model.filmTableList[3].title + " (" + Model.filmTableList[3].release_date.ToString().Substring(0, 4) + ")";
                                     }
-                                    <div class="col-sm-8" style="color:white;font-size:13px">
+                                    <div class="col-xs-8" style="color:white;font-size:13px">
                                         @title_3
                                     </div>
                                 </div>
 
                             </div>
+
                         </div>
                     </div>
-                    <div class="col-sm-6" style="background-color:aqua;height:100%">
+                    <div class="col-xs-6" style="background-color:aqua;height:100%">
                         <div class="row" style="background-color:green;height:40%">
-                            <div class="col-md-6 nopadding img-container" style="width:50%;background-color:brown;position:relative">
+                            <div id=@Model.filmTableList[4].id_film onclick="onFilmDiv_Click(this.id)" class="col-xs-6 nopadding img-container" style="width:50%;background-color:brown;position:relative">
                                 <img src=@Model.mainPageFilmPhotos[4] />
                                 <div class="row" style="height:80px; position:absolute; left:25px;bottom:10px;z-index:6;">
                                     <div style="height:100%" class="col-sm-4">
                                         <img src=@Model.filmTableList[4].poster_url style="height:100%" />
                                     </div>
                                     @{
-                                            String title_4 = Model.filmTableList[4].title + " (" + Model.filmTableList[5].release_date.ToString().Substring(0, 4) + ")";
+                String title_4 = Model.filmTableList[4].title + " (" + Model.filmTableList[5].release_date.ToString().Substring(0, 4) + ")";
                                     }
-                                    <div class="col-sm-8" style="color:white;font-size:13px">
+                                    <div class="col-xs-8" style="color:white;font-size:13px">
                                         @title_4
                                     </div>
                                 </div>
 
                             </div>
-                            <div class="col-md-6 nopadding img-container" style="width:50%;background-color:yellow;position:relative">
+
+                            <div id=@Model.filmTableList[5].id_film onclick="onFilmDiv_Click(this.id)" class="col-xs-6 nopadding img-container" style="width:50%;background-color:yellow;position:relative">
                                 <img src=@Model.mainPageFilmPhotos[5] />
                                 <div class="row" style="height:80px; position:absolute; left:25px;bottom:10px;z-index:6;">
-                                    <div style="height:100%" class="col-sm-4">
+                                    <div style="height:100%" class="col-xs-4">
                                         <img src=@Model.filmTableList[5].poster_url style="height:100%" />
                                     </div>
                                     @{
-                                        String title_5 = Model.filmTableList[5].title + " (" + Model.filmTableList[5].release_date.ToString().Substring(0, 4) + ")";
+                String title_5 = Model.filmTableList[5].title + " (" + Model.filmTableList[5].release_date.ToString().Substring(0, 4) + ")";
                                     }
-                                    <div class="col-sm-8" style="color:white;font-size:13px">
+                                    <div class="col-xs-8" style="color:white;font-size:13px">
                                         @title_5
                                     </div>
                                 </div>
 
                             </div>
+
                         </div>
-                        <div class="row" style="background-color:red;height:60%;overflow:hidden;position:relative">
+                        <div id=@Model.filmTableList[1].id_film onclick="onFilmDiv_Click(this.id)" class="row" style="background-color:red;height:60%;overflow:hidden;position:relative">
                             <img style="width:100%" src=@Model.mainPageFilmPhotos[1] />
                             <div class="row" style="height:100px; position:absolute; left:25px;bottom:10px;z-index:6;">
-                                <div style="height:100%" class="col-sm-2">
+                                <div style="height:100%" class="col-xs-2">
                                     <img src=@Model.filmTableList[1].poster_url style="height:100%" />
                                 </div>
                                 @{
-                                     String title_1 = Model.filmTableList[1].title + " (" + Model.filmTableList[1].release_date.ToString().Substring(0, 4) + ")";
+                String title_1 = Model.filmTableList[1].title + " (" + Model.filmTableList[1].release_date.ToString().Substring(0, 4) + ")";
                                 }
-                                <div class="col-sm-10" style="color:white;font-size:1em">
+                                <div class="col-xs-10" style="color:white;font-size:1em">
                                     @title_1
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             }
@@ -146,10 +151,8 @@
     <div id="filmListPartialView" class="filmListPartialView">
         @{Html.RenderPartial("_filmsSortedByGenereAndRatingPartialView", Model);}
     </div>
-
-
-
 </div>
+
 
 <script>
     window.onload = function func() {
@@ -160,8 +163,8 @@
     }
 
     function openPageNumber(value) {
-        $('#filmListPartialView').load('@Url.Action("LoadPage", "Home")' + '?id=' + value);
-
+        var genre = document.getElementById("genreKeeper").textContent;
+        $('#filmListPartialView').load('@Url.Action("LoadPage", "Home")' + '?id=' + value + '&genre='+ genre);
     }
 
     function genereDropdown_Click(value) {
