--- a/FilmBayMVC/Views/Shared/_Layout.cshtml
+++ b/FilmBayMVC/Views/Shared/_Layout.cshtml
@@ -11,10 +11,15 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="row container">
-                <div class="col-sm-2"><input type="text" class="form-control" id="searchQuery" /></div>
-                <div class="col-sm-2"><button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" onclick="searchFilmInDB(searchQuery.value)">Launch modal test</button></div>            
-            <div class="col-sm-2 navbar-header">
+        <div class="row ">
+            <div class="navbar-collapse collapse col-xs-1" style="width:75px">
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("FilmBay", "Index", "Home")</li>
+                </ul>
+            </div>
+            <div class="col-xs-3" style="width:230px"><input type="text" class="form-control" id="searchQuery" /></div>
+            <div class="col-xs-1"><button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" onclick="searchFilmInDB(searchQuery.value)">Search</button></div>
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -23,14 +28,14 @@
                 @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
 
-            <div  class="navbar-collapse collapse">
-                   <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Main Page", "Index", "Home")</li>
-                 <li>@Html.ActionLink("About", "About", "Home")</li>
-             <li>@Html.ActionLink("My movies", "UserInfo", "UserPage")</li>
-            </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
+            <div class="navbar-collapse collapse col-xs-6 ">
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Main Page", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("My movies", "UserInfo", "UserPage")</li>
+                </ul>
+                @Html.Partial("_LoginPartial")
+            </div>
         </div>
     </div>
     <div class="container body-content">
@@ -71,16 +76,7 @@
         $('#partialViewDivMainLayout').load('@Url.Action("SearchFilmResult", "Home")' + '?filmName=' + filmName);
     }
     function onFilmDiv_Click(value) {
-       
         window.location.href = '@Url.Action("FilmPage", "FilmPage")' + '?id=' + value;
-        @*$.ajax({
-            url: '@Url.Action("FilmPage", "FilmPage")' + '?id=' + value,
-            data: {}, //parameters go here in object literal form
-            type: 'GET',
-            //datatype: 'json',
-            success: function (data) { alert('got here with data'); },
-            error: function () { alert('something bad happened'); }
-        });*@
     }
 
 </script>
